--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div id="home-bio-square">
         <p><span id="first-sen">I am an <span class = "anthro-color">evolutionary anthropologist</span><br> and a <span class="data-color">data scientist</span>. Not always in that order.</span>
             <br><br>
-            Currently, I am a PhD Candidate at <a href="http://anthropology.emory.edu/home/" target="_blank">Emory University</a> where I develop novel quantitative methods to understand cross-cultural variation in human behavior and development. I am broadly-trained in the social and behavioral sciences and graduate-level coursework in Bayesian Statistics, Machine Learning, and Game Theory.</p>
+            Currently, I am a PhD Candidate at <a href="http://anthropology.emory.edu/home/" target="_blank">Emory University</a> where I develop quantitative methods to understand cross-cultural variation in human behavior and development. I am broadly-trained in the social and behavioral sciences and graduate-level coursework in Bayesian Statistics, Machine Learning, and Game Theory.</p>
 
             <p>Before coming to Emory I studied Anthropology and Psychology at <a href="https://cas.vancouver.wsu.edu/anthropology" target="_blank">WSU Vancouver</a> and worked as a Research Assistant for the <a href="https://hraf.yale.edu/" target="_blank">Human Relations Area Files at Yale University.</a></p>
 
