--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="img">
                 <figure>
             <img src="icons/cfr.png"></img>
-                    <figcaption>
+                    <figcaption><a class='pdf-button' href="https://ecoevorxiv.org/ydrcm/" target="_blank">PDF </a>|
                         <a class="data-button" href="https://github.com/erik-ringen/cfr" target="_blank">DATA</a></p></figcaption>
                 </figure>
             </div>
@@ -254,7 +254,7 @@ resource stress. <br><br>
     </div>
 
 
-    <footer>© 2021 Erik J. Ringen <a href="mailto:ringen.erik@gmail.com" target="_blank">Contact Me</a></footer>
+    <footer>© 2022 Erik J. Ringen <a href="mailto:ringen.erik@gmail.com" target="_blank">Contact Me</a></footer>
   </div>
 
   <script src="index.js"></script>
